se termino el primer reto

--- a/figuras.html
+++ b/figuras.html
@@ -28,6 +28,24 @@
       </form>
     </section>
 
+    <section>
+      <h2>Calcula la altura de un tringulo</h2>
+      <form>
+        <label for="InputTriangulo">Escribe cuanto mide el lado1: </label>
+        <input type="number" id="InputLado1" />
+        <br />
+        <label for="InputTriangulo">Escribe cuanto mide el lado2: </label>
+        <input type="number" id="InputLado2" />
+        <br />
+        <label for="InputTriangulo">Escribe cuanto mide el lado3: </label>
+        <input type="number" id="InputLado3" />
+        <br />
+        <button type="button" onclick="calcularAltura()">
+          Calcular la altura
+        </button>
+      </form>
+    </section>
+
     <script src="./figuras.js"></script>
   </body>
 </html>
